--- a/BUG'galteriya/appsettings.json
+++ b/BUG'galteriya/appsettings.json
@@ -27,5 +27,37 @@
       "ConnectTimeOut": 5000,
       "ConnectRetry": 3
     }
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Overrides": {
+        "Microsoft": "Information",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.TelegramBot" ],
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "bin/logs.txt",
+          "rollingInterval": "Day"
+        }
+      },
+      {
+        "Name": "TelegramBot",
+        "Args": {
+          "Token": "7467039849:AAEajeEtMKWbBPKwjDQuwtZJ0_uQWpC8rfo",
+          "ChatId": "1479249505",
+          "ReadableApplicationName": "SimpleApplication",
+          "UseEmoji": true,
+          "RestrictedToMinimumLevel": "Information",
+          "BatchPostingLimit": 5,
+          "Period": "0.00:00:20",
+          "Mode": "Logs"
+        }
+      }
+    ]
   }
 }
