--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.6" />
+    <PackageReference Include="Serilog" Version="4.0.0" />
+  </ItemGroup>
+
 </Project>
